--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap-vue": "^2.1.0",
     "core-js": "^3.4.4",
     "vue": "^2.6.11",
+    "vue-prism-component": "^1.1.1",
     "vue-router": "^3.1.3"
   },
   "devDependencies": {
